# rlss_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
action/: FollowTrajectory.action  Land.action  NAV.action  Takeoff.action
launch/: cf2_ll.launch  cf2_small_phy.launch  crazyflie.launch  create2.launch  create2_phy.launch  hector_quadrotor_sim.launch  hector_quadrotor_spawn.launch  hetero_phy.launch  hetero_sim.launch  spawn_quadrotor_rlss.launch  turtlebot2_phy.launch  turtlebot3_phy.launch  turtlebot_controller_tuning.launch  turtlebot_controller_tuning_ctrl.launch  turtlebot_sim.launch  turtlebots_sim.launch  vrpn.launch
msg/: AABB.msg  AABBCollisionShape.msg  AABBCollisionShapeAndState.msg  Bezier.msg  OccupancyGrid.msg  PiecewiseTrajectory.msg  RobotState.msg
src/: commander.cpp  figure8.cpp  figure8_3d.cpp  follow_trajectory_action_server.cpp  land_action_server.cpp  nav_action_server.cpp  planner.cpp  replanner.cpp  static_desired_trajectory_feeder.cpp  static_occupancy_grid_feeder.cpp  takeoff_action_server.cpp  tf_localizer.cpp
src/cf/: state_reducer.cpp
src/cf2/: localizer.cpp  state_reducer.cpp
src/create2/: localizer.cpp  state_reducer.cpp
src/hector_quadrotor/: controller.cpp  localizer.cpp
srv/: DesiredTrajectory.srv  SetOnOff.srv
urdf/: box.urdf
